# kafka_job_interface_service

./: README.md  create_virtual_env.sh  injector.py  main.py  pyproject.toml  service-log.sh  service-start.sh
config/: log_config.py
controller/: job_controller.py
service/: job_service.py
